--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <hr>
-    <a href="Mis pasatiempos.html">Mis pasatiempos</a>
+    <a href="pasatiempos.html">Mis pasatiempos</a>
     <a href="Contacto.html">Contacto</a>
 </body>
 
